# science-avec-des

./: .gitignore  .gitmodules  README.md  anotacoes.ipynb  australia.ipynb  handson_02.ipynb  penknife.ipynb  snippet_toc.ipynb
.ipynb_checkpoints/: anotacoes-checkpoint.ipynb  penknife-checkpoint.ipynb  penknife-checkpoint.md  toc-checkpoint.ipynb
_gibi/: 0_tratamento.ipynb  1_eda.slides.html  d2019_meta.jl  raphapinheiro_quem-le-quadrinhos-em-2018.csv  raphapinheiro_quem-le-quadrinhos-em-2019.csv
_taxi-trip-duration/: 02_trip_duration_v1.ipynb  study-kernel_nyc-taxi-trip-duration.ipynb
books/: Link to documents
gibi/: index.html  index.ipynb  index.slides.html
itub_preparation/: penknife.md  penknife2.ipynb  toc.ipynb
notas/: 0b000-classificacao.ipynb  0b000-regressao.ipynb  0b0000-classificacao.ipynb  0b0000-regressao.ipynb  0b0000_classificacao.ipynb  0b0000_regressao.ipynb  0b0001-agrupamento.ipynb  0b0001-padrao.ipynb  0b0001_agrupamento.ipynb  0b0001_padrao.ipynb  0b0010_reforco.ipynb  0b0011_stacking.ipynb  0b0100-ffnn-e-mlp.ipynb  0b0101-eda.ipynb  0b0101-selecao.ipynb  0b0101_eda.ipynb  0b0101_explicabilidade.ipynb  0b0101_selecao.ipynb  0b011-bagging.ipynb  0b0110-recommender-system.ipynb  0b0110-serie-temporal.ipynb  0b0110-texto.ipynb  0b0110_texto.ipynb  handson_01.ipynb  lab_agrupamento.ipynb  lab_brier-loss.ipynb  lab_decision-tree.ipynb  lab_gaussian_torsional.ipynb  lab_generalizacao.ipynb  lab_metrica-customizada.ipynb  lab_outlier-detection.ipynb  lab_pandasalive.ipynb  lab_reforco_0b0000.ipynb  lab_reforco_0b0001.ipynb  lab_regression.ipynb  lab_selecao-e-otimizacao-multiclasse.ipynb  lab_selecao-e-otimizacao.ipynb  lab_synthetic-data-and-sampling.ipynb  (+15 more)
notas/0b0110_text/: 0b0110_text_experiment_0.ipynb  pyproject.toml
(+82 files in other folders)
