[tool.poetry]
name = "0b0110-text"
version = "0.1.0"
description = ""
authors = ["dsthiago <thiagosd.2.18@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ipykernel = "^6.29.5"
ipywidgets = "^8.1.5"
python-dotenv = "^1.0.1"
dspy-ai = "^2.4.14"
textgrad = "^0.1.5"
llama-index = "^0.11.4"
llama-index-llms-openai = "^0.2.2"
llama-index-embeddings-huggingface = "^0.3.1"
llama-index-embeddings-instructor = "^0.2.1"
llama-index-vector-stores-deeplake = "^0.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
