[tool.poetry]
name = "0b0110-text"
version = "0.1.0"
description = ""
authors = ["dsthiago <thiagosd.2.18@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
ipykernel = "^6.29.5"
ipywidgets = "^8.1.5"
python-dotenv = ">=1.2.2"
dspy = ">=3.0"
textgrad = ">=0.1.5"
llama-index = ">=0.13.0"
llama-index-llms-openai = "*"
llama-index-embeddings-huggingface = "*"
llama-index-vector-stores-deeplake = "*"
# security floors (Dependabot 2026-07): transitive deps held below patch by the old graph
torch = ">=2.10"
transformers = ">=5.3"
nltk = ">=3.9.4"
h11 = ">=0.16.0"
aiohttp = ">=3.14.1"
tornado = ">=6.5.7"
urllib3 = ">=2.7.0"
pypdf = ">=6.13.3"
pyarrow = ">=23.0.1"
pillow = ">=12.2.0"
pyjwt = ">=2.13.0"
jinja2 = ">=3.1.6"
requests = ">=2.33.0"
ujson = ">=5.13.0"
mako = ">=1.3.12"
marshmallow = ">=3.26.2"
filelock = ">=3.20.3"
gdown = ">=5.2.2"
litellm = ">=1.84.0"
idna = ">=3.15"
pygments = ">=2.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
